Practicas/.metadata/.plugins/org.eclipse.cdt.ui/Practica_4P2.build.log
08:44:23 **** Incremental Build of configuration Debug for project Practica_4P2 ****
make -j8 all 
arm-none-eabi-gcc "../Drivers/API/Src/API_debounce.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F439xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/ASUS/Desktop/PdM_workspace/Practicas/Practica_4P2/Drivers/API" -I"C:/Users/ASUS/Desktop/PdM_workspace/Practicas/Practica_4P2/Drivers/API/Inc" -I"C:/Users/ASUS/Desktop/PdM_workspace/Practicas/Practica_4P2/Drivers/API/Src" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/API/Src/API_debounce.d" -MT"Drivers/API/Src/API_debounce.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/API/Src/API_debounce.o"
../Drivers/API/Src/API_debounce.c: In function 'debounceFSM_update':
../Drivers/API/Src/API_debounce.c:22:31: error: 'USER_Btn_GPIO_Port' undeclared (first use in this function)
   22 |          if (HAL_GPIO_ReadPin(USER_Btn_GPIO_Port, USER_Btn_Pin) == GPIO_PIN_SET) { // Read User Button state
      |                               ^~~~~~~~~~~~~~~~~~
../Drivers/API/Src/API_debounce.c:22:31: note: each undeclared identifier is reported only once for each function it appears in
../Drivers/API/Src/API_debounce.c:22:51: error: 'USER_Btn_Pin' undeclared (first use in this function)
   22 |          if (HAL_GPIO_ReadPin(USER_Btn_GPIO_Port, USER_Btn_Pin) == GPIO_PIN_SET) { // Read User Button state
      |                                                   ^~~~~~~~~~~~
../Drivers/API/Src/API_debounce.c:31:10: warning: implicit declaration of function 'buttonPressed' [-Wimplicit-function-declaration]
   31 |          buttonPressed(); //Turn On LED
      |          ^~~~~~~~~~~~~
../Drivers/API/Src/API_debounce.c:47:10: warning: implicit declaration of function 'buttonReleased' [-Wimplicit-function-declaration]
   47 |          buttonReleased(); // Turn Off LED
      |          ^~~~~~~~~~~~~~
make: *** [Drivers/API/Src/subdir.mk:25: Drivers/API/Src/API_debounce.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

08:44:24 Build Failed. 3 errors, 2 warnings. (took 362ms)

